--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -13,6 +13,39 @@
         background: $color-white;
         height: 50rem;
         box-shadow: 0 2rem 4rem rgba($color-black, .2);
+        border-radius: 3px;
+        display: table;
+        overflow: hidden;
+    }
 
+    &__left {
+        width: 33.333%;
+        display: table-cell;
+    }
+
+    &__right {
+        width: 66.667%;
+        display: table-cell;
+        vertical-align: middle;
+        padding: 3rem 5rem;
+    }
+
+    &__img {
+        display: block;
+        width: 100%;
+    }
+
+    &__text {
+        font-size: 1.4rem;
+        margin-bottom: 4rem;
+
+        // Colomn layout
+        column-count: 2;
+        column-gap: 2rem;
+        column-rule: 1px solid $color-grey-light-2;
+        hyphens: auto;
+        -moz-hyphens: auto;
+        -webkit-hyphens: auto;
+        -ms-hyphens: auto;
     }
 }
