--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,6 +6,38 @@
     left: 0;
     background-color: rgba($color-black, .8);
     z-index: 20000;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 250ms;
+
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    &:target &__content {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    &__close {
+        &:link,
+        &:visited {
+            color: $color-grey-dark;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 3rem;
+            text-decoration: none;
+            display: inline-block;
+            transition: all 250ms;
+            line-height: 1;
+        }
+
+        &:hover {
+            color: $color-primary;
+        }
+    }
 
     &__content {
         @include absolute-center;
@@ -16,6 +48,9 @@
         border-radius: 3px;
         display: table;
         overflow: hidden;
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(.5);
+        transition: all 250ms 100ms;
     }
 
     &__left {
