--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,15 @@
 html {
   /* Root font size */
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 62.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   /* inherits from * */
