--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,18 @@
 html {
     /* Root font size */
     font-size: 62.5%;
+
+    @include query-for(landscape) {
+        font-size: 56.25%;
+    }
+
+    @include query-for(tablet) {
+        font-size: 50%;
+    }
+
+    @include query-for(desktop) {
+        font-size: 75%;
+    }
 }
 
 body {
