--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 // abstracts
 @import "abstracts/functions";
 @import "abstracts/mixins";
+@import "abstracts/queries";
 @import "abstracts/variables";
 
 // base
