--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -164,4 +164,52 @@
         font-weight: 100;
         margin-bottom: 8rem;
     }
+
+@include query-for(tablet) {
+        height: auto;
+        border-radius: 3px;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 3rem rgba($color-black, .15);
+    
+        &__side {
+            height: auto;   
+            position: relative;      
+            box-shadow: none;  
+    
+            &--back {
+                transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%)
+            }
+        }
+    
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+
+        &__details {
+            padding: 1rem 3rem;
+        }
+    
+        // Back
+        &__cta {
+            position: relative;
+            top: 0%;
+            left: 0;
+            transform: translate(0);
+            width: 100%;
+            padding: 4rem;
+            padding-top: 7rem;
+        }
+    
+        &__price-box {
+            text-align: center;
+            color: $color-white;
+        }
+
+    
+        &__price-value {
+            font-size: 6rem;
+            margin-bottom: 3rem;
+        }
+    }
 }
