--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -17,6 +17,10 @@
         display: block;
         transition: all 200ms;
 
+        @include query-for(tablet) {
+            width: 100%;
+        }
+
         &::-webkit-input-placeholder {
             color: $color-grey-dark-2;
         }
@@ -54,6 +58,11 @@
     &__radio-group {
         width: 49%;
         display: inline-block;
+
+        @include query-for(tablet) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-label {
