--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -9,6 +9,16 @@
     transform: skewX(-12deg);
     background: rgba($color-white, .6);
 
+    @include query-for(tablet) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+
+    @include query-for(mobile) {
+        transform: skewX(0);
+    }
+
     &__shape {
         width: 15rem;
         height: 15rem;
@@ -20,6 +30,10 @@
         -webkit-clip-path: circle(50% at 50% 50%);
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
+
+        @include query-for(mobile) {
+            transform: translateX(-3rem) skewX(0);
+        }
     }
 
     &__img {
@@ -30,6 +44,10 @@
 
     &__text {
         transform: skewX(12deg);
+
+        @include query-for(mobile) {
+            transform: skewX(0);
+        }
     }
 
     &__caption {
