--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -70,10 +70,33 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
-    height: 50rem;
+    @include query-for(landscape) {
+        background-image: linear-gradient(
+        105deg, 
+        rgba($color-white, .9) 0%,
+        rgba($color-white, .9) 70%,
+        transparent 70%) 
+        ,url(../img/nat-10.jpg);
+    }
+
+    @include query-for(tablet) {
+        background-image: linear-gradient(
+            to right, 
+            rgba($color-white, .9) 0%,
+            rgba($color-white, .9) 100%) 
+            ,url(../img/nat-10.jpg);
+    }
 
     &__form {
         width: 50%;
         padding: 6rem;
+
+        @include query-for(landscape) {
+            width: 70%;
+        }
+
+        @include query-for(landscape) {
+            width: 100%;
+        }
     }
 }
