--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -16,7 +16,7 @@
         position: absolute;
         top: 0;
         left: 0;
-
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
 
         &--front {
