--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -24,12 +24,17 @@
         height: 15rem;
         float: left;
         position: relative;
-
-        -webkit-shape-outside: circle(50% at 50% 50%);
-        shape-outside: circle(50% at 50% 50%);
-        -webkit-clip-path: circle(50% at 50% 50%);
-        clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
+        border-radius: 50%;
+        overflow: hidden; // Because of older browser support
+
+        @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+            -webkit-clip-path: circle(50% at 50% 50%);
+            clip-path: circle(50% at 50% 50%);
+            -webkit-shape-outside: circle(50% at 50% 50%);
+            shape-outside: circle(50% at 50% 50%);
+            border-radius: none;
+        }
 
         @include query-for(mobile) {
             transform: translateX(-3rem) skewX(0);
