--- a/sass/abstracts/_queries.scss
+++ b/sass/abstracts/_queries.scss
@@ -5,25 +5,25 @@ $desktop: 62.5em;
 
 @mixin query-for($size) {
     @if $size == mobile {
-        @media (max-width: $mobile) {
+        @media only screen and (max-width: $mobile) {
             @content;
         }
     }
 
     @if $size == tablet {
-        @media (max-width: $tablet) {
+        @media only screen and (max-width: $tablet) {
             @content;
         }
     }
 
     @if $size == landscape {
-        @media (max-width: $landscape) {
+        @media only screen and (max-width: $landscape) {
             @content;
         }
     }
 
     @if $size == desktop {
-        @media (min-width: $desktop) {
+        @media only screen and (min-width: $desktop) {
             @content;
         }
     }
